spacing issue resolved

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -112,7 +112,7 @@
 }
 .topCall{
     text-align: center;
-    margin: auto;
+    margin: 10px, auto;
 }
 .main a {
     transition: .3s;
