--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,16 @@ body {
 .topnav {
     background-color: #3fbbc0 !important;
     font-weight: 500px !important;
-    /* padding: 10px; */
+    padding: 10px;
     color: #fff;
+}
+.topTime svg{
+    display: flex;
+    margin-top: 0 !important;
+}
+.topCall svg{
+    display: flex;
+    margin-top: 0 !important;
 }
 .medinav {
     justify-content: center !important;
